; ModuleID = '/home/carl/AnghaBench/mongoose/src/common/platforms/cc3200/extr_cc3200_libc.c_fprint_str.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/common/platforms/cc3200/extr_cc3200_libc.c_fprint_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONSOLE_UART = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fprint_str(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  br label %5

5:                                                ; preds = %18, %2
  %6 = load i8*, i8** %4, align 8
  %7 = load i8, i8* %6, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %5
  %11 = load i8*, i8** %4, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp eq i32 %13, 10
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load i32, i32* @CONSOLE_UART, align 4
  %17 = call i32 @MAP_UARTCharPut(i32 %16, i8 signext 13)
  br label %18

18:                                               ; preds = %15, %10
  %19 = load i32, i32* @CONSOLE_UART, align 4
  %20 = load i8*, i8** %4, align 8
  %21 = getelementptr inbounds i8, i8* %20, i32 1
  store i8* %21, i8** %4, align 8
  %22 = load i8, i8* %20, align 1
  %23 = call i32 @MAP_UARTCharPut(i32 %19, i8 signext %22)
  br label %5

24:                                               ; preds = %5
  ret void
}

declare dso_local i32 @MAP_UARTCharPut(i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
